/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Cameron Parrish
 */
package ucf.assignments;

import java.util.List;

public class ToDoListMain {

    // This is a ToDoList
    // Contains a List of Items and a name for the todo list
    public static class ToDoList{
        public int ID;
        public String Name;
        public List<ItemMain.Items> ItemList;
    }
}
