@startuml
'https://plantuml.com/class-diagram

class App {
    start(Stage stage)
}

class AppController {
        + ToDoListMain.ToDoList CurrentList
        + ItemMain.Items CurrentItem
        + List<ItemMain.Items> ItemList
        + List<ItemMain.Items> FilterItemList
        + int EditFlag
        + void initialize()
        + void EditItemButton()
        + void CreateItemButton()
        + void AddEditBackPress()
        + void ClearList()
        + void DeleteItemButton()
        + void SaveListButton()
        + void ImportListButton()
        + void CreateItemSubmitButton()
        + void wipe(int FilterFlag)
        + void ConfirmFilterButton()
}

class Filter {
    + {static} List<ItemMain.Items> CompleteItems(List<ItemMain.Items> ItemList, List<ItemMain.Items> FilterItemList)
    + {static}  List<ItemMain.Items> AllItems(List<ItemMain.Items> ItemList)
    + {static} List<ItemMain.Items> InCompleteItems(List<ItemMain.Items> ItemList, List<ItemMain.Items> FilterItemList)
}

class ImportExport {
    + {static} List<ItemMain.Items> ExportItems(List<ItemMain.Items> ItemList, String Path)
    + {static} List<ItemMain.Items> ImportItems(List<ItemMain.Items> ItemList, String Path)
    String current
    String name
    String description
    String duedate
    String status
    int location

}

class ItemMain {
    + {static} List<ItemMain.Items> CreateItem(List<ItemMain.Items> ItemList, String Name, String Description, String Duedate, String Status)
    + {static} Items EditItemGetObj(List<ItemMain.Items> ItemList, String name)
    + {static} List<ItemMain.Items> DestroyItem(List<ItemMain.Items> ItemList, String Current)
    + {static} List<ItemMain.Items> EditItem(List<ItemMain.Items> ItemList, String Current, int EditFlag)

}


class ToDoListMain {

}



class Items{
        + String name
        + String description
        + String duedate
        + String status
}

class ToDoList{
        + int ID
        + String Name
        + List<ItemMain.Items> ItemList
}



ItemMain *-- Items
ToDoListMain *-- ToDoList
App <|-- AppController
AppController <|-- Filter
AppController <|-- ImportExport
AppController <|-- ItemMain
AppController <|-- ToDoListMain
@enduml